--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,15 @@ input[type="number"] {
   box-sizing: border-box;
 }
 
+input[type="text"] {
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
 .main-content {
   display: flex;
 }
@@ -105,4 +114,8 @@ input[type="number"] {
 
 .main-content > aside {
   flex: 1;
+}
+
+.button-style {
+  background-color: chocolate;
 }
